--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" type="text/css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css" rel="stylesheet"/>
 
     <link rel="icon" href="1694716131277.png" type="image/x-icon">
@@ -167,7 +167,7 @@
                         <a class="nav-link" href="https://www.facebook.com/share/1B6SEkLcN1/"><i class="fab fa-facebook"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://twitter.com/sir_ikoo"><i class="fab fa-twitter"></i></a>
+                        <a class="nav-link" href="https://x.com/sir_ikoo"><i class="fab fa-x-twitter"></i></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://www.instagram.com/sir_ikoo/"><i class="fab fa-instagram"></i></a>
@@ -827,12 +827,11 @@
                     <hr>
                     <p>Email  : rikorizky20@gmail.com</p>
                     <p>No Telpon    : 081223209190</p>
-                    <p>Instagram : sir_ikoo</p>
                     <div class="socialButton mt-3">
-                        <a href="https://www.instagram.com/sir_ikoo/"><i class="bx bxl-instagram-alt"></i></a>
-                        <a href="https://www.facebook.com/share/1B6SEkLcN1/"><i class="bx bxl-facebook"></i></a>
-                        <a href="https://twitter.com/sir_ikoo"><i class="bx bxl-twitter"></i></a>
-                        <a href="https://discord.com/channels/@me"><i class="bx bxl-discord-alt"></i></a>
+                        <a href="https://www.instagram.com/sir_ikoo/"><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/share/1B6SEkLcN1/"><i class="fab fa-facebook"></i></a>
+                        <a href="https://x.com/sir_ikoo"><i class="fab fa-x-twitter"></i></a>
+                        <a href="https://discord.com/channels/@me"><i class="fab fa-discord"></i></a>
                     </div>
                 </div>
             </div>
